--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ tags: [Hossain, Mohd, Faysal, electrical, engineering, blog, university, pennsyl
         <div class="small-12 medium-9 large-10 columns">
             <header class="notepad-post-header">
                 <h3 class="notepad-post-title">
-                    <a href="{{ site.url }}{{ post.url }}">
+                    <a href="/_posts">
                         {{ post.title }}
                     </a>
                 </h3>
